# litecnn-pure-cpp

./: .gitignore  CMakeLists.txt  MODEL_CARD.md  Makefile.mps  Makefile.mps_configurable  README.md  breed_classes.json  breed_classes_131.json  extract_weights.py  test_decode.cpp
docs/: AB_TESTING.md  AUTOMATION.md  CICD.md  DUAL_SERVER.md  MPS_DEPLOYMENT.md  TELEGRAM_SETUP.md  TRAINING_GUIDE.md
docs/adr/: 001-pure-cpp-implementation.md
include/: layers.h  model.h  server.h  tensor.h
scripts/: ab_test.sh  ab_test_v2.sh  deploy_from_gpu.sh  notify.sh  notify_discord.sh  prepare_testset.sh  promote.sh  rollback.sh  server_manager.sh  status_report.sh  test_memory.sh  watch_and_deploy.sh
scripts/mps/: deploy_from_gpu.sh  deploy_latest.sh  deploy_mps_server.sh  export_model.py  watch_and_deploy_mps.sh
src/: layers.cpp  main.cpp  model.cpp  server.cpp  server_mps.cpp  server_mps_configurable.cpp  tensor.cpp
